<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main_Menu">

    <LinearLayout
        android:id="@+id/first_line"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/snack_menu"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/snack" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/button_view"
                android:onClick="snack"
                android:text="@string/snack"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salad_menu"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/salad" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/button_view"
                android:onClick="salad"
                android:text="@string/salad"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:id="@+id/fast_food_menu">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fast_food" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/button_view"
                android:onClick="junk_food"
                android:text="@string/fast_food"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/second_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/first_line"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/drink_menu"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/drink" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@xml/button_view"
                android:onClick="drink"
                android:text="@string/drinks"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coffee_menu"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coffee" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/button_view"
                android:onClick="coffee"
                android:text="@string/coffee"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cake_menu"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cake" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/button_view"
                android:onClick="cake"
                android:text="@string/cake"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <SearchView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

            <ImageButton
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="cart_menu"
                app:srcCompat="@drawable/cart"

                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            <ImageButton
                android:id="@+id/translate_usa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/usaicon"
                android:clickable="true"
                android:onClick="translate_usa"
                app:layout_constraintEnd_toStartOf="@+id/menbutton"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/translate_rus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/russiaicon"
                android:clickable="true"
                android:onClick="translate_rus"
                app:layout_constraintStart_toEndOf="@+id/translate_usa"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/list"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="170dp"
            android:layout_height="110dp"
            tools:layout_editor_absoluteX="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>