<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dradient"
    tools:context=".Naxutest">




    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="115dp"

            app:srcCompat="@drawable/mser" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/meat"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="3000 amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/meat_num"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/meat_btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:clickable="true"
                android:gravity="end"
                android:onClick="meat_cart"
                android:src="@drawable/cart" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="170dp"
            android:layout_height="115dp"

            app:srcCompat="@drawable/panir" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cheese"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="2500դր/др/amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextNumber14"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/imageButton14"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="end"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout20"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="170dp"
            android:layout_height="115dp"
            app:srcCompat="@drawable/marinad" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/marinades"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1800դր/др/amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextNumber13"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/imageButton13"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="end"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout21"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="170dp"
            android:layout_height="115dp"

            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="home2"
            app:srcCompat="@drawable/home"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

            <ImageButton
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="cart_nax"
                app:srcCompat="@drawable/cart"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            tools:ignore="MissingConstraints">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/search"
                tools:layout_editor_absoluteX="1dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>