<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.EMenu.nyam_nyam.Cake">


    <LinearLayout
        android:id="@+id/linearLayout4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="MissingConstraints,NotSibling">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="115dp"
            android:background="#70FFFFFF"
            app:srcCompat="@drawable/mikado" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/micado"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="550 amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textAlignment="center"
                android:id="@+id/micado"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/add"
                android:clickable="true"
                android:id="@+id/micado_plus"
                android:onClick="micado_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

            <ImageButton
                android:id="@+id/imageButton2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="end"
                android:onClick="micado"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="#33FFFFFF"
            app:srcCompat="@drawable/napoleon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/napoleon"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="600 amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/napoleon"
                android:textAlignment="center"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/add"
                android:clickable="true"
                android:id="@+id/napoleon_plus"
                android:onClick="napoleon_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

            <ImageButton
                android:id="@+id/imageButton5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="end"
                android:onClick="napoleon"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="170dp"
            android:layout_height="115dp"
            android:background="#70FFFFFF"
            app:srcCompat="@drawable/donut" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/donut"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="750 amd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/donut"
                android:layout_width="80dp"
                android:textAlignment="center"
                android:layout_height="35dp"
                android:background="@xml/edittext_view"
                android:inputType="number" />
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/add"
                android:clickable="true"
                android:id="@+id/donut_plus"
                android:onClick="donut_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

            <ImageButton
                android:id="@+id/imageButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:clickable="true"
                android:gravity="end"
                android:onClick="donut"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="170dp"
            android:layout_height="115dp"

            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="home5"
            app:srcCompat="@drawable/home"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

            <ImageButton
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cart_cake"
                app:srcCompat="@drawable/cart"

                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/search"
            tools:layout_editor_absoluteX="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>